# capstone

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
app/: main.py
app/api/: health.py  me.py  profiles.py  recommendations.py  search.py
app/config/: settings.py
app/models/: schemas.py
app/services/: auth.py  db.py  dynamodb.py  embeddings.py  qdrant.py  recommendations.py  search.py
mobile/: .gitignore  App.tsx  QUICKSTART.md  README.md  SETUP.md  app.config.js  app.json  metro.config.js  package-lock.json  package.json  run_android_windows.cmd  tsconfig.json
mobile/android/: gradle.properties  settings.gradle
retrieval/: create_profile.py  create_profile_from_excel.py  demographic_enums.py  embedding_fusion.py  profile_recommendations_demo.py  profile_recommendations_old.py  qdrant_search.py  test_ranking_approaches.py  test_ranking_approaches_README.md
scraping/: check_session_billtext.py  scraping.py
summaries/: create_profile.py  demographic_enums.py  embedding_fusion.py  generate_embeddings.py  generate_summaries.py  profile_recommendations(1).py  profile_recommendations.py  profile_recommendations_demo.py  qdrant_search.py  sync_db.py  tagging.py  tags.json  test.py
tagging/: adhoc.py  american_tags.json  find_low_confidence.py  fix_ids.py  low_confidence_bills.json  retag_all.py  retag_low_confidence.py  tagging.py  tags.json  test_mp_vote.py
tools/: README.md  build_federal_districts_data.js
user_tests/: DOCUMENTATION.md  GUIDE.md  README.md  analysis.py  app.py  requirements.txt  tags_api.py  test_setup.py
(+92 files in other folders)
