[project]
name = "BillBoard"
version = "0.1.0"
description = "BillBoard"
authors = [{name = "Arkhan Lewis", email = "arkhan.lewis@uwaterloo.com"}]
# add ur email if u care it doesnt affect anything
dynamic = ["dependencies"]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "tagging", "retrieval", "summaries"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
